crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/040.cypher
MATCH (n) RETURN n.id;
MATCH (m:System) RETURN m
